--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -15,15 +15,14 @@ The "Tracklist" holds "Metadata" about media:
 
 === "Metadata" ===
 
-"Metadata" is data that the medias carry within themselves as a means of self-identification (commonly known as "tags"), or data that has been retrieved about the files trough other means, e.g. an internet service that provides additional data about particular media files.
-
+"Metadata" represents the informations associated with a media, such as its name, its performer, its length ...
 "Metadata" is an array of dict entries in the form (string, variant) eg: {sv}.
 
 There is only one mandatory field : location
 The list of optional fields is on [[MPRIS_Metadata]]
 
 ===== "location" =====
-* Stores an url or a file path to the media
+* Stores an url to the media (local files are represented as a file:// url)
 
 == D-Bus ==
 
