--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -66,10 +66,18 @@ Makes the "Media Player" exit.
    <method name="Quit">
    </method>
 
-=== /TrackList ===
+=== /TrackList object ===
 
 ==== GetMetadata ====
 Gives all meta data available for element at given position in the "TrackList"
+
+===== Arguments: =====
+* An int containing the position in the [[#"TrackList"|TrackList]] of the item which metadata is requested
+
+===== Return value: =====
+* A dict containing the metadata, each dict entry stores the metadata item name as a string and its value as a variant
+
+===== Introspection data: =====
 
   <method name="GetMetadata">
     <arg type="i" direction="in" />
@@ -79,19 +87,35 @@ Gives all meta data available for element at given position in the "TrackList"
 ==== GetCurrentTrack ====
 Return the position of current URI in the "TrackList." The return value is zero-based, so the position of the first URI in the "TrackList" is 0. The behavior of this method is unspecified if there are zero elements in the "TrackList."
 
+===== Return value: =====
+* The position in the [[#"TrackList"|TrackList]] of the active element as an int
+
+===== Introspection data: =====
+
    <method name="GetCurrentTrack">
      <arg type="i" direction="out" />
    </method>
 
 ==== GetLength ====
-Number of elements in the "TrackList"
+Number of elements in the [[#"TrackList"|TrackList]]
+
+===== Return value: =====
+* The number of elements as an int
+
+===== Introspection data: =====
 
    <method name="GetLength">
      <arg type="i" direction="out" />
    </method>
 
 ==== AddTrack ====
-Appends an URI in the "TrackList", play it immediately if the 2nd argument is TRUE
+Appends an URI in the [[#"TrackList"|TrackList]], play it immediately if the 2nd argument is TRUE
+
+===== Arguments: =====
+* The uri of the item to append to the tracklist as a string
+* A boolean, TRUE if the item should be played immediately, FALSE otherwise
+
+===== Introspection data: =====
 
    <method name="AddTrack">
      <arg type="s" />
@@ -99,11 +123,17 @@ Appends an URI in the "TrackList", play it immediately if the 2nd argument is TR
    </method>
 
 ==== DelTrack ====
-Removes an URI from the "TrackList", given its position
+Removes an URI from the [[#"TrackList"|TrackList]], given its position
+
+===== Arguments: =====
+* The position in the tracklist of the item to remove, as an int.
+
+===== Introspection data =====
 
    <method name="DelTrack">
      <arg type="i" />
    </method>
+
 
 ==== SetLoop ====
 Toggle playlist loop.
