--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -88,7 +88,7 @@ Gives all meta data available for element at given position in the "TrackList"
 Return the position of current URI in the "TrackList." The return value is zero-based, so the position of the first URI in the "TrackList" is 0. The behavior of this method is unspecified if there are zero elements in the "TrackList."
 
 ===== Return value: =====
-* The position in the [[#"TrackList"|TrackList]] of the active element as an int
+* int: Position in the [[#"TrackList"|TrackList]] of the active element.
 
 ===== Introspection data: =====
 
