--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -100,7 +100,7 @@ Return the position of current URI in the "TrackList." The return value is zero-
 Number of elements in the [[#"TrackList"|TrackList]]
 
 ===== Return value: =====
-* The number of elements as an int
+* int: Number of elements in the [[#"TrackList"|TrackList]]
 
 ===== Introspection data: =====
 
