--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -149,6 +149,9 @@ Toggle playlist loop.
 ==== SetRandom ====
 Toggle playlist shuffle / random. It may or may not play tracks only once.
 
+===== Arguments: =====
+* boolean: TRUE to play randomly / shuffle playlist, FALSE to play normally / reorder playlist
+
    <method name="SetRandom">
      <arg type="b" />
    </method>
