--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -284,25 +284,41 @@ Returns the playing position (will be [0;<track_length>] in milliseconds)
 
 === The signals ===
 
-Signals must be emitted from /Player path and org.freedesktop.MediaPlayer interface.
+Signals must be emitted from '''org.freedesktop.MediaPlayer''' interface.
 
-==== TrackChange ==== 
+==== /Player signals ====
+
+===== TrackChange ===== 
 Signal is emitted when the "Media Player" plays another "Track". Argument of the signal is the metadata attached to the new "Track"
 
    <signal name="TrackChange">
      <arg type="a{sv}"/>
    </signal>
 
-==== StatusChange ==== 
+===== StatusChange =====
 Signal is emitted when the status of the "Media Player" change. The argument has the same meaning as the value returned by GetStatus.
 
    <signal name="StatusChange">
     <arg type="(iiii)"/>
    </signal>
 
-==== CapsChange ==== 
+===== CapsChange =====
 Signal is emitted when the "Media Player" changes capabilities, see [[#GetCaps|GetCaps method]].
 
    <signal name="CapsChange">
+     <arg type="i" />
+   </signal>
+
+==== /TrackList signal ====
+
+===== TracklistChange =====
+Signal is emitted when the "TrackList" content has changed:
+* When one or more elements have been added
+* When one or more elements have been removed
+* When the ordering of elements has changed
+
+The argument is the number of elements in the TrackList after the change happened.
+
+   <signal name="TrackListChange">
      <arg type="i" />
    </signal>
