--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -70,6 +70,10 @@ Makes the "Media Player" exit.
 
 ==== GetMetadata ====
 Gives all meta data available for element at given position in the "TrackList"
+Metadata structure details:
+Each dict entry is organized as follows
+* string: Metadata item name
+* variant: Metadata value.
 
 ===== Arguments: =====
 * int: Position in the [[#"TrackList"|TrackList]] of the item of which the metadata is requested
