--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -46,7 +46,7 @@ All methods must be accessed through the interface '''org.freedesktop.MediaPlaye
 
 * /Player : Playback control
 
-* /TrackList : TrackList management
+* /TrackList : [[#"TrackList"|TrackList]] management
 
 == The Methods ==
 
@@ -69,7 +69,7 @@ Makes the "Media Player" exit.
 === /TrackList object ===
 
 ==== GetMetadata ====
-Gives all meta data available for element at given position in the "TrackList"
+Gives all meta data available for element at given position in the [[#"TrackList"|TrackList]]
 Each dict entry is organized as follows
 * string: Metadata item name
 * variant: Metadata value.
@@ -88,7 +88,7 @@ Each dict entry is organized as follows
   </method>
 
 ==== GetCurrentTrack ====
-Return the position of current URI in the "TrackList." The return value is zero-based, so the position of the first URI in the "TrackList" is 0. The behavior of this method is unspecified if there are zero elements in the "TrackList."
+Return the position of current URI in the [[#"TrackList"|TrackList]] The return value is zero-based, so the position of the first URI in the [[#"TrackList"|TrackList]] is 0. The behavior of this method is unspecified if there are zero elements in the [[#"TrackList"|TrackList]].
 
 ===== Return value: =====
 * int: Position in the [[#"TrackList"|TrackList]] of the active element.
@@ -115,7 +115,7 @@ Number of elements in the [[#"TrackList"|TrackList]]
 Appends an URI in the [[#"TrackList"|TrackList]].
 
 ===== Arguments: =====
-* string: The uri of the item to append to the tracklist
+* string: The uri of the item to append.
 * boolean, TRUE if the item should be played immediately, FALSE otherwise
 
 ===== Introspection data: =====
