--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -50,7 +50,7 @@ All methods must be accessed through the interface '''org.freedesktop.MediaPlaye
 
 == The Methods ==
 
-=== / (Root) object ===
+=== / (Root) object methods ===
 
 ==== Identity ====
 Identify the "media player" as in "VLC 0.9.0", "bmpx 0.34.9", "Audacious 1.4.0" ...
