--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -67,6 +67,8 @@ Identify the "media player" as in "VLC 0.9.0", "bmpx 0.34.9", "Audacious 1.4.0" 
 ==== Quit ====
 Makes the "Media Player" exit.
  
+===== Introspection data: =====
+
    <method name="Quit">
    </method>
 
