--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -171,10 +171,12 @@ Toggle playlist shuffle / random. It may or may not play tracks only once.
      <arg type="b" />
    </method>
 
-=== /Player ===
+=== /Player object methods ===
 
 ==== Next ====
 Goes to the next element (What if we're at the end? -- '''NOTE''' ''Nothing terrible needs to happen, the player should just ignore it. However UIs, and maybe not only UIs, can receive a hint as to whether there is a next track using the Caps API'')
+
+===== Introspection data: =====
 
    <method name="Next">
    </method>
@@ -182,11 +184,14 @@ Goes to the next element (What if we're at the end? -- '''NOTE''' ''Nothing terr
 ==== Prev ====
 Goes to the previous element (what if we're at the beginning? '''See above''')
 
+===== Introspection data: =====
    <method name="Prev">
    </method>
 
 ==== Pause ====
 If playing : pause. If paused : unpause
+
+===== Introspection data: =====
 
    <method name="Pause">
    </method>
@@ -194,17 +199,26 @@ If playing : pause. If paused : unpause
 ==== Stop ====
 Stop playing.
 
+===== Introspection data: =====
+
    <method name="Stop">
    </method>
 
 ==== Play ====
 If playing : rewind to the beginning of current track, else : start playing.
 
+===== Introspection data: =====
+
    <method name="Play">
    </method>
 
 ==== Repeat ====
 Toggle the current track repeat.
+
+===== Arguments: =====
+* boolean: TRUE to repeat the current track, FALSE to stop repeating.
+ 
+===== Introspection data: =====
 
    <method name="Repeat">
      <arg type="b" />
@@ -216,6 +230,11 @@ Return the status of "Media Player" as a struct of 4 ints:
 * Second interger: 0 = Playing linearly , 1 = Playing randomly.
 * Third integer: 0 = Go to the next element once the current has finished playing , 1 = Repeat the current element
 * Fourth integer: 0 = Stop playing once the last element has been played, 1 = Never give up playing
+
+===== Return value: =====
+* (iiii): Status
+
+===== Introspection data: =====
 
    <method name="GetStatus">
    <arg type="(iiii)" direction="out"/>
