Added link to metadata profiles description
Levitation import of page 2171 rev 7955 (minor).

--- a/0-/Developer Ideas.mediawiki
+++ b/0-/Developer Ideas.mediawiki
@@ -13,6 +13,7 @@ Here are some ideas about XMMS2 (or XEPs - ''XMMS2 Enhancement Proposals''), if 
 * [[Configuration file]]
 * [[Medialib Plugins]]
 * [[New medialib backend]]
+* [[Metadata profiles]]
 
 == Playlist ==
 * '''[[Collections]]'''
