Add service client ideas
Levitation import of page 2333 rev 7962.

--- a/0-/GSoC:2007/Service Clients.mediawiki
+++ b/0-/GSoC:2007/Service Clients.mediawiki
@@ -19,6 +19,8 @@ Service client idea empowers XMMS2 with unlimited expendibility.  Different serv
 ...
 [[{{PAGENAME}}/Tutorial|Tutorial]]
 ...
+[[{{PAGENAME}}/Ideas|Service client ideas]]
+...
 [http://eblog.zeegeek.cn Blog]
 
 }}
