--- a/0-/GSoC:2007/Service Clients/Ideas.mediawiki
+++ b/0-/GSoC:2007/Service Clients/Ideas.mediawiki
@@ -4,4 +4,34 @@ This page contains new ideas of service clients. If you have one, just add it to
 
 == Brand New Ideas ==
 
+=== Write Back Mediatag ===
+
+XMMS2 should help organizing one's music collection. Editing the metadata of a media entry is a common task for users who want to append or correct the provided information. The problem is, if they share their files with others or copy them to a portable player, this information will be lost or, according to the original media's tagging, outdated and likely confusing.
+
+This service client solves this problem, updating the media's metatags where applicable and possible. It should work with different types of tagging, like ID3v2 or Ogg media.
+
+
+It should be possible for the user to decide whether all tags should be re-written (IE, original tagging being removed completely), or only found changes to be applied.
+
+Furthermore, the user should be able to define a collection on which he wants the update to be run. Also, clients could transparently use this service client to do the update after any metadata edit.
+
+
+=== Export Media ===
+
+Organizing the music solely within XMMS2, it can be a hard and/or time consuming task to find the items of a given collection on the source media by hand. Willing to play a collection on a portable device or burning it on a CD, the user should be free'd of this unnecessary task, as we already know the media and how to fetch it.
+
+This service client should provide a service to at least duplicate a given collection into a given directory. Ideally, the media files' names should be consistently chosen by a given scheme, too. Further features could include support of cdrecord, etc.
+
+
+''Note:'' It is questionable if this feature should be a service client. It seems reasonable that several "heavy weight" clients want to expose this feature to the user. If this turns out to be a false assumption, a dedicated client for export/burning would be a better fit.
+A client doesn't have access to the raw media yet.
+
+
+=== Cleanup Metadata ===
+
+Collecting music from various sources, some users find themselves with half-baked or errornous tagged media. There are several possibilities to cope with this problem, for example asking MusicBrainz or using some simple algorithm to try to match artist/album names with spelling errors.
+
+This client assists the user with practicle possibilities to cleanup and extend metadata. It should operate on a given collection. Manual assistance of the user should be possible to implement by a client using this service client, for example giving further input or decision on doubt.
+
+
 Go back to [[Summer of Code 2007/Service Clients|Service Client Summary]].
