Levitation import of page 2412 rev 7970.

--- a/0-/Client:Cluck.mediawiki
+++ b/0-/Client:Cluck.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=Cluck| author=[[Robin Lee Powell]]| website=http://digitalkingdom.org/~rlpowell/hobbies/software/cluck.html | version=[1.0]| devlanguage=Scheme (Chicken)| ui=Console| screenshots=See [http://digitalkingdom.org/~rlpowell/hobbies/software/cluck.html the Cluck site] | description=Cluck is a TUI (windowed console) client with lots of features.  It is written in Scheme (which is basically LISP), but distributed as C with fairly minimal requirements.}}
+{{Client| name=Cluck| author=[[Robin Lee Powell]]| website=http://digitalkingdom.org/~rlpowell/hobbies/software/cluck.html | version=1.0 | devlanguage=Scheme (Chicken)| ui=Console| screenshots=See [http://digitalkingdom.org/~rlpowell/hobbies/software/cluck.html the Cluck site] | description=Cluck is a TUI (windowed console) client with lots of features.  It is written in Scheme (which is basically LISP), but distributed as C with fairly minimal requirements.}}
