--- a/0-/Client:Esperanza/Roadmap.mediawiki
+++ b/0-/Client:Esperanza/Roadmap.mediawiki
@@ -8,6 +8,8 @@ This page tries to collect the future of Esperanza. Please put new ideas in the 
 ** &#10063; Animations when the medialib is shown?
 * &#10003; Both wizard and serverdialog handles malformatted URL's pretty bad. When someone enter "host" without "tcp://host" it dies. (done in esperanza-ephraim.git)
 * &#10003; On OSX the menus in the top are not activated (done in esperanza-ephraim.git)
+* &#10063; Configurable text in the ProgressFrame
+* &#10063; Minimode ignores time remains settings
 
 == Distant Future / New Features ==
 * When Esperanza is minimized to a bar(mini-mode), it's automaticly renamed to ''Esperanza <2>''. It would be a good idea to change the name back to Esperanza  after it's minimized to the bar.
