/* playlist remove [options] */
Levitation import of page 2332 rev 7975.

--- a/0-/New korving CLI.mediawiki
+++ b/0-/New korving CLI.mediawiki
@@ -254,14 +254,7 @@ playlist.
 
 ==== playlist remove [options] ====
 
-Remove a playlist.  By default, this command acts on the active
-playlist.  If the active playlist is removed, the next playlist in the
-list becomes active.
-
-''Note: Or maybe this is not the cleverest thing..''
-
- Options:
- -p, --playlist <name>  Remove a different playlist.
+Remove a playlist.  It is disallowed to remove the active playlist.
 
 ==== playlist config [options] ====
 
